integration/src/test/resources/templates/invalid-target/js-browser/build.gradle
kotlin {
    js {
        browser()
    }
}

benchmark {
    targets {
        register("js")
    }
}